# dbserver

./: .gitignore  pyproject.toml  readme.md  requirements.txt
api/tests/: test_zippo_api.py
ui/: config.py
ui/docs/: helpers.html  signup.html  tests.html
ui/resources/: helpers.resource  locators.resource  signup.resource
ui/tests/: 00_signup.robot  01_login.robot
