[tool.poetry]
name = "dbserver"
version = "0.1.0"
description = "DBserver Exercise"
authors = ["Jones Sabino <jones.sabino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
robotframework = "^4.1.3"
robotframework-seleniumlibrary = "^6.0.0"
robotframework-faker = "^5.0.0"
requests = "^2.27.1"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
